fix: modal height on mobile

--- a/src/components/ModalLayout/style.module.scss
+++ b/src/components/ModalLayout/style.module.scss
@@ -6,9 +6,13 @@
 	top: 0;
 	left: 0;
 	width: 100%;
-	height: 100vh;
-	overflow: auto;
 	display: flex;
+	flex-direction: column;
+	width: 100vw;
+	min-height: 100vh;
+	min-height: -webkit-fill-available;
+	height: -webkit-fill-available;
+	overflow-y: auto;
 }
 
 .close_button {
